implement more fn, bug fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
     "target": "es2015",
-    "module": "commonjs",
+    "module": "es6",
     "declaration": true,
     "outDir": "./lib",
+    "moduleResolution": "node",
     "strict": true
   },
   "include": ["src"],
