--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ok-fail",
-  "version": "1.1.0",
+  "version": "1.6.0",
   "description": "...",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -18,17 +18,23 @@
   "author": "Thor Long",
   "license": "ISC",
   "private": false,
-	"prepare" : "npm run build",
-	"files": ["lib/**/*"],
+  "prepare": "npm run build",
+  "files": [
+    "lib/**/*"
+  ],
   "bugs": {
     "url": "https://github.com/thrugl/okFail/issues"
   },
   "homepage": "https://github.com/thrugl/okFail#readme",
   "dependencies": {
-    "cross-fetch": "^3.0.6"
+    "@types/jquery-param": "^1.0.2",
+    "cross-fetch": "^3.0.6",
+    "jquery-param": "^1.1.3",
+    "qs": "^6.9.4"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
+    "@types/qs": "^6.9.5",
     "typescript": "^4.0.2"
   }
 }
