--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ok-fail",
-  "version": "1.6.11",
+  "version": "1.6.12",
   "description": "...",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc"
   },
