--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ok-fail",
-  "version": "1.8.15",
+  "version": "1.8.16",
   "description": "...",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -29,11 +29,13 @@
   "dependencies": {
     "cross-fetch": "^3.0.6",
     "jquery-param": "^1.1.3",
-    "qs": "^6.9.4"
+    "qs": "^6.9.4",
+    "ramda": "^0.27.1"
   },
   "devDependencies": {
     "@types/jquery-param": "^1.0.2",
     "@types/node": "^14.11.2",
+    "@types/ramda": "^0.27.40",
     "typescript": "^4.0.2"
   }
 }
